--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <title>Portfólio - Andressa</title>
 </head>
 <body>
-    
     <header class="header" id="header">
         <h1>Andressa Turchetto</h1>
         <input type="checkbox" id="check">
+        <label for="check" class="icons">
+            <i class='bx bx-menu' id="menu-icon"></i>
+            <i class='bx bx-x' id="close-icon"></i>
+        </label>
         <label for="check" class="icons">
             <i class='bx bx-menu' id="menu-icon"></i>
             <i class='bx bx-x' id="close-icon"></i>
@@ -29,7 +32,6 @@
             <a href="#contato">Contato</a>
         </nav>
     </header>
-
     <main>
         <section class="home" id="home">
             <div class="home-sci">
@@ -47,9 +49,6 @@
                 <h1>Olá, eu sou a <span>Andressa!</span></h1>
                 <h3>E atuo como <span class="multiplos-textos"></span></h3>
                 <p>Trabalho com as tecnologias HTML, CSS, Tailwind, Javascript, Typescript e Angular.</p>
-            </div>
-            <div class="home-img">
-                <img class="title__profile" src="img/profile.jpeg" alt="Foto Andressa Turchetto">
             </div>
         </section>
         <section class="sobre_mim" id="sobremim">
@@ -127,20 +126,20 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/projeto-clinica.jpeg" alt="Projeto Clinica">
+                    <img src="img/projeto-clinica.jpeg" alt="Exemplo">
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
-                        <h3>Projeto Clinica</h3>
+                        <h3>Projeto Clínica</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sapiente eum quod, consectetur laboriosam non modi commodi consequuntur expedita officia cumque. Temporibus praesentium sapiente odit explicabo asperiores repellat corporis saepe.</p>
                         <a href="#" class="btn" target="_blank">Repositório</a>
                         <a href="#" class="btn" target="_blank">Deploy</a>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="#" alt="Exemplo">
+                    <img src="img/projeto-pet-boutique.png" alt="Exemplo">
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
-                        <h3>Exemplo exemplo</h3>
+                        <h3>Projeto Pet Boutique</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sapiente eum quod, consectetur laboriosam non modi commodi consequuntur expedita officia cumque. Temporibus praesentium sapiente odit explicabo asperiores repellat corporis saepe.</p>
                         <a href="#" class="btn" target="_blank">Repositório</a>
                         <a href="#" class="btn" target="_blank">Deploy</a>
