--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
             <i class='bx bx-menu' id="menu-icon"></i>
             <i class='bx bx-x' id="close-icon"></i>
         </label>
-        <label for="check" class="icons">
-            <i class='bx bx-menu' id="menu-icon"></i>
-            <i class='bx bx-x' id="close-icon"></i>
-        </label>
         <nav class="navbar">
             <a href="#sobremim">Sobre mim</a>
             <a href="#skills">Skills</a>
@@ -239,6 +235,6 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="./js/script.js"></script>
+    <script src="script/main.js"></script>
 </body>
 </html>
