Atualizando projetos no portfólio

--- a/index.html
+++ b/index.html
@@ -115,30 +115,50 @@
                     <img src="img/projeto-agencia-de-viagem.jpeg" alt="Projeto Agência de Viagens">
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
-                        <h3>Projeto Agência de Viagens</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sapiente eum quod, consectetur laboriosam non modi commodi consequuntur expedita officia cumque. Temporibus praesentium sapiente odit explicabo asperiores repellat corporis saepe.</p>
-                        <a href="#" class="btn" target="_blank">Repositório</a>
+                        <h3>Agência de Viagens</h3>
+                        <p>Projeto com páginas dinâmicas com formulário HTML que enviam dados do front-end para o back-end.</p>
+                        <a href="https://github.com/AndressaTurchetto/projeto-dev-2/tree/main/projeto-agencia-de-viagens" class="btn" target="_blank">Repositório</a>
+                        <a href="https://andressaturchetto.github.io/projeto-dev-2/projeto-agencia-de-viagens/index.html" class="btn" target="_blank">Deploy</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/projeto-clinica.jpeg" alt="Projeto Clínica">
+                    <div class="card-content">
+                        <h4>Desenvolvimento Front-End</h4>
+                        <h3>Clínica CM Life</h3>
+                        <p>Uma página web responsiva utilizando as tecnologias HTML e CSS com tags semânticas, tabelas, Flexbox e media queries.</p>
+                        <a href="https://github.com/AndressaTurchetto/projeto-dev-2/tree/main/projeto-clinica" class="btn" target="_blank">Repositório</a>
+                        <a href="file:///C:/Users/ANDRESSA/Documents/estudos/projeto-dev-2/projeto-clinica/index.html" class="btn" target="_blank">Deploy</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/projeto-pet-boutique.png" alt="Projeto Pet Boutique">
+                    <div class="card-content">
+                        <h4>Desenvolvimento Front-End</h4>
+                        <h3>Pet Boutique</h3>
+                        <p>Usei as imagens para preencher o fundo dos elementos e sombra para destacar elementos. Utilizei um recurso conversa com um clique do WhatsApp e um mapa interativo do Google Maps apresentando a localização da loja.</p>
+                        <a href="https://github.com/AndressaTurchetto/pet-boutique" class="btn" target="_blank">Repositório</a>
                         <a href="#" class="btn" target="_blank">Deploy</a>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/projeto-clinica.jpeg" alt="Exemplo">
+                    <img src="img/projeto-cafeteria.png" alt="Projeto Cafeteria">
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
-                        <h3>Projeto Clínica</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sapiente eum quod, consectetur laboriosam non modi commodi consequuntur expedita officia cumque. Temporibus praesentium sapiente odit explicabo asperiores repellat corporis saepe.</p>
-                        <a href="#" class="btn" target="_blank">Repositório</a>
+                        <h3>Cafeteria Manhattan</h3>
+                        <p>Projeto feito apenas com HTML e CSS para estudo com um layout refinado. Foi implementado lista informativa, efeito "flutuante" no link do rodapé, mapa de localização e um estilo com efeito parallax.</p>
+                        <a href="https://github.com/AndressaTurchetto/cafeteria-manhattan" class="btn" target="_blank">Repositório</a>
                         <a href="#" class="btn" target="_blank">Deploy</a>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/projeto-pet-boutique.png" alt="Exemplo">
+                    <img src="img/projeto-bio-neymar.png" alt="Exemplo">
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
-                        <h3>Projeto Pet Boutique</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sapiente eum quod, consectetur laboriosam non modi commodi consequuntur expedita officia cumque. Temporibus praesentium sapiente odit explicabo asperiores repellat corporis saepe.</p>
-                        <a href="#" class="btn" target="_blank">Repositório</a>
-                        <a href="#" class="btn" target="_blank">Deploy</a>
+                        <h3>Projeto Neymar Jr</h3>
+                        <p>O projeto é um LinkBio personalizada, aplicando o conceito de Pseudo-classes e pseudo-elementos e utilizando a tag vídeo.</p>
+                        <a href="https://github.com/AndressaTurchetto/projeto-dev-2/tree/main/projeto-neymar" class="btn" target="_blank">Repositório</a>
+                        <a href="file:///C:/Users/ANDRESSA/Documents/estudos/projeto-dev-2/projeto-neymar/index.html" class="btn" target="_blank">Deploy</a>
                     </div>
                 </div>
                 <div class="card">
@@ -151,6 +171,7 @@
                         <a href="#" class="btn" target="_blank">Deploy</a>
                     </div>
                 </div>
+
                 <div class="card">
                     <img src="#" alt="Exemplo">
                     <div class="card-content">
@@ -173,27 +194,7 @@
                     </div>
                 </div>
 
-                <div class="card">
-                    <img src="#" alt="Exemplo">
-                    <div class="card-content">
-                        <h4>Desenvolvimento Front-End</h4>
-                        <h3>Exemplo exemplo</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sapiente eum quod, consectetur laboriosam non modi commodi consequuntur expedita officia cumque. Temporibus praesentium sapiente odit explicabo asperiores repellat corporis saepe.</p>
-                        <a href="#" class="btn" target="_blank">Repositório</a>
-                        <a href="#" class="btn" target="_blank">Deploy</a>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="#" alt="Exemplo">
-                    <div class="card-content">
-                        <h4>Desenvolvimento Front-End</h4>
-                        <h3>Exemplo exemplo</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sapiente eum quod, consectetur laboriosam non modi commodi consequuntur expedita officia cumque. Temporibus praesentium sapiente odit explicabo asperiores repellat corporis saepe.</p>
-                        <a href="#" class="btn" target="_blank">Repositório</a>
-                        <a href="#" class="btn" target="_blank">Deploy</a>
-                    </div>
-                </div>
+                
             </div>
         </section>
         <section class="contato" id="contato">
@@ -201,7 +202,7 @@
             <p>Vamos conversar? Trocar ideias, fazer networking, orçamentos, propostas... Fique à vontade em me mandar uma mensagem!</p>
             <form action="#">
                 <div class="input-box">
-                    <div class="input-field field">
+                    <div class="input-fiel field">
                         <input type="text" placeholder="Nome" id="name" class="item" autocomplete="off">
                         <div class="error-txt">Coloque seu nome completo.</div>
                     </div>
