--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="#" alt="Exemplo">
+                    <img src="img/projeto-lista-de-compras.jpeg" alt="Exemplo">
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
-                        <h3>Exemplo exemplo</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sapiente eum quod, consectetur laboriosam non modi commodi consequuntur expedita officia cumque. Temporibus praesentium sapiente odit explicabo asperiores repellat corporis saepe.</p>
-                        <a href="#" class="btn" target="_blank">Repositório</a>
-                        <a href="#" class="btn" target="_blank">Deploy</a>
+                        <h3>Lista de Compras</h3>
+                        <p>Projeto de lista de compras funcional trabalhando com dados reais e explorando os estudos sobre todo o ciclo de vida Angular.</p>
+                        <a href="https://github.com/AndressaTurchetto/lista-de-compras/tree/master" class="btn" target="_blank">Repositório</a>
+                        <a href="https://github.com/AndressaTurchetto/lista-de-compras/tree/master" class="btn" target="_blank">Deploy</a>
                     </div>
                 </div>
 
