Finalizando alguns ajustes

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
                         <h3>Memorando</h3>
-                        <p>Projeto feito com Angular para listar e organizar taferas de casa, trabalho e estudo.</p>
+                        <p>Projeto feito com Angular para listar e organizar tarefas de casa, trabalho e estudo.</p>
                         <a href="https://github.com/AndressaTurchetto/Angular/tree/main/animacoes-angular" class="btn" target="_blank">Repositório</a>
                     </div>
                 </div>
