--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </header>
     <main>
         <section class="home" id="home">
+            <button id="dark-mode-toggle">Dark</button>
             <div class="home-sci">
                 <a href="https://www.linkedin.com/in/andressadev/" target="_blank"><img src="./assets/icon-linkedin.svg" alt="Linkedin"></a>
                 <a href="https://github.com/AndressaTurchetto/" target="_blank"><img src="./assets/icon-github.svg" alt="Github"></a>
@@ -223,6 +224,7 @@
                     <textarea name="" id="message" cols="30" rows="10" placeholder="Mensagem" class="item" autocomplete="off"></textarea>
                     <div class="error-txt">Preencha com a sua mensagem.</div>
                 </div>
+                <p>Apenas para simulação!</p>
                 <button type="submit">Enviar</button>
             </form>
         </section>
