--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <a href="#" class="">
             <h2>Andressa Turchetto</h2>
         </a>
+        <div class="toggle-container">
+            <input type="checkbox" name="" id="darkModeToggle" class="toggle-input">
+            <label for="darkModeToggle" class="toggle-label">
+                <span class="toggle-button"></span>
+            </label>
+        </div>
         <input type="checkbox" id="check">
         <label for="check" class="icons">
             <i class='bx bx-menu' id="menu-icon"></i>
@@ -32,7 +38,6 @@
     </header>
     <main>
         <section class="home" id="home">
-            <button id="dark-mode-toggle">Dark</button>
             <div class="home-sci">
                 <a href="https://www.linkedin.com/in/andressadev/" target="_blank"><img src="./assets/icon-linkedin.svg" alt="Linkedin"></a>
                 <a href="https://github.com/AndressaTurchetto/" target="_blank"><img src="./assets/icon-github.svg" alt="Github"></a>
