--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                         <h3>Formulário Reactive Form - Tamplete-Driven</h3>
                         <p>Projeto possui dois formulários de validação Angular, um com Reactive Form e outro com Tamplete Driven e estilização com Tailwind.</p>
                         <a href="https://github.com/AndressaTurchetto/formulario-angular" class="btn" target="_blank">Repositório</a>
+                        <a href="https://formulario-angular-henqf25os-andressaturchettos-projects.vercel.app" class="btn" target="_blank">Deploy</a>
                     </div>
                 </div>
                 <div class="card">
@@ -194,7 +195,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/img/projeto-lista-de-compras.jpeg" alt="Exemplo">
+                    <img src="./assets/img/projeto-lista-de-compras.jpeg" alt="Projeto lista de compras">
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
                         <h3>Lista de Compras</h3>
