Deixando totalmente responsivo

--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 </head>
 <body>
     <header class="header" id="header">
-        <a href="#" class="">
-            <h2>Andressa Turchetto</h2>
-        </a>
         <div class="toggle-container">
             <input type="checkbox" name="" id="darkModeToggle" class="toggle-input">
             <label for="darkModeToggle" class="toggle-label">
@@ -46,7 +43,7 @@
             <div class="home-content">
                 <h1>Olá, eu sou a <span>Andressa!</span></h1>
                 <h3>E atuo como <span class="multiplos-textos"></span></h3>
-                <p>Desde que me interessei na área de programação, estudo diariamente para conseguir a minha primeira oportunidade como desenvolvedora Jr. Há 9 meses venho desenvolvendo diversos projetos para colocar em pratica todo o meu conhecimento.</p>
+                <p>Estudante de Engenharia de Software com experiência na área de desenvolvimento web. Venho desenvolvendo diversos projetos para colocar em prática todo meu conhecimento e me desafio constantemente resolvendo bugs e corrigindo códigos.</p>
             </div>
         </section>
         <section class="sobre_mim" id="sobremim">
