Mudando projeto do portfólio

--- a/index.html
+++ b/index.html
@@ -182,13 +182,12 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/img/projeto-bio-neymar.png" alt="Exemplo">
+                    <img src="./assets/img/projeto-buscante.png" alt="Imagem do projeto Buscante para consumo da API do Google Books">
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
-                        <h3>Projeto Neymar Jr</h3>
-                        <p>O projeto é um LinkBio personalizada, aplicando o conceito de Pseudo-classes e pseudo-elementos e utilizando a tag vídeo.</p>
-                        <a href="https://github.com/AndressaTurchetto/projeto-dev-2/tree/main/projeto-neymar" class="btn" target="_blank">Repositório</a>
-                        <a href="https://andressaturchetto.github.io/projeto-dev-2/projeto-neymar/index.html" class="btn" target="_blank">Deploy</a>
+                        <h3>Projeto Pesquisa Google Books</h3>
+                        <p>Projeto feito com o Framework Angular e a biblioteca RxJs para consumo da API do Google Books.</p>
+                        <a href="https://github.com/AndressaTurchetto/api-google-books" class="btn" target="_blank">Repositório</a>
                     </div>
                 </div>
                 <div class="card">
