Colocando novo projeto na seção de projetos

--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
             <p>Projetos realizados.</p>
             <div class="card-container">
                 <div class="card">
+                    <img src="./assets/img/jornada-milhas.png" alt="Projeto Jornada Milhas">
+                    <div class="card-content">
+                        <h4>Desenvolvimento Front-End</h4>
+                        <h3>Jornada Milhas</h3>
+                        <p>Projeto com consumo de API para pesquisa de passagens, filtros, depoimentos com login e tela de cadastro.</p>
+                        <a href="https://github.com/AndressaTurchetto/projeto-jornada-milhas-angular" class="btn" target="_blank">Repositório</a>
+                    </div>
+                </div>
+                <div class="card">
                     <img src="./assets/img/projeto-formulario-validacao-angular.jpeg" alt="Exemplo">
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
