--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
                         <h3>Jornada Milhas</h3>
-                        <p>Projeto com consumo de API para pesquisa de passagens, filtros, depoimentos com login e tela de cadastro.</p>
+                        <p>Projeto para consumo de API para pesquisa de passagens, filtros, depoimentos com login e tela de cadastro.</p>
                         <a href="https://github.com/AndressaTurchetto/projeto-jornada-milhas-angular" class="btn" target="_blank">Repositório</a>
                     </div>
                 </div>
