--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="home-sci">
                 <a href="https://www.linkedin.com/in/andressadev/" target="_blank"><img src="./assets/icon-linkedin.svg" alt="Linkedin"></a>
                 <a href="https://github.com/AndressaTurchetto/" target="_blank"><img src="./assets/icon-github.svg" alt="Github"></a>
-                <a href="assets/Currículo - Andressa Turchetto.pdf" target="_blank"><img src="./assets/icon-cloud.svg" alt="Download Currículo"></a>
+                <a href="assets/curriculo-andressa-turchetto.pdf" target="_blank"><img src="./assets/icon-cloud.svg" alt="Download Currículo"></a>
             </div>
             <div class="home-content">
                 <h1>Olá, eu sou a <span>Andressa!</span></h1>
